--- a/tis.config
+++ b/tis.config
@@ -189,8 +189,39 @@
     }
   },
   {
-    "name": "First test from 'tests/main.c'",
+    "name": "First test from 'tests/main.c' (short)",
     "compilation_cmd": "-I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
+    "compilation_database": [
+      "compile_commands.json"
+    ],
+    "filesystem": {
+      "files": [
+        {
+          "name": "data/grey.jpg",
+          "from": "data/grey.jpg"
+        },
+        {
+          "name": "data/teapot.ppm",
+          "from": "data/teapot.ppm"
+        },
+        {
+          "name": "data/penguin.jpg",
+          "from": "data/penguin.jpg"
+        }
+      ]
+    },
+    "files": [
+      "tests/main.c",
+      "tis/stub.c",
+      "pdfgen.c",
+      "tests/penguin.c"
+    ],
+    "machdep": "gcc_x86_64",
+    "main": "main"
+  },
+  {
+    "name": "First test from 'tests/main.c' (long)",
+    "compilation_cmd": "-I src -DTIS_LONG_TEST -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
     "compilation_database": [
       "compile_commands.json"
     ],
