Filling tis.config.

--- a/tis.config
+++ b/tis.config
@@ -12,7 +12,7 @@
   },
   {
     "name": "First test from 'tests/main.c'",
-    "compilation_cmd": "-I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
+    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
     "filesystem": {
       "files": [
         {
