--- a/tis.config
+++ b/tis.config
@@ -2,9 +2,6 @@
   {
     "name": "Example from README.md (GCC-like x86-64)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "files": [
       "tests/readme_example.c",
       "tis/stub.c",
@@ -16,9 +13,6 @@
   {
     "name": "Example from README.md (32-bit ARM little-endian)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "files": [
       "tests/readme_example.c",
       "tis/stub.c",
@@ -30,9 +24,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data1 (GCC-like x86-64)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -55,9 +46,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data1 (32-bit ARM little-endian)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -80,9 +68,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data2 (GCC-like x86-64)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -105,9 +90,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data2 (32-bit ARM little-endian)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -130,9 +112,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data3 (GCC-like x86-64)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -155,9 +134,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data3 (32-bit ARM little-endian)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -180,9 +156,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data4 (GCC-like x86-64)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -205,9 +178,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data4 (32-bit ARM little-endian)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -230,9 +200,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data5 (GCC-like x86-64)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -255,9 +222,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data5 (32-bit ARM little-endian)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -280,9 +244,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data6 (GCC-like x86-64)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -305,9 +266,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data6 (32-bit ARM little-endian)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -330,9 +288,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data7 (GCC-like x86-64)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -355,9 +310,6 @@
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data7 (32-bit ARM little-endian)",
     "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
     "filesystem": {
       "files": [
         {
@@ -379,10 +331,7 @@
   },
   {
     "name": "First test from 'tests/main.c' (GCC-like x86-64)",
-    "compilation_cmd": "-I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
+    "compilation_cmd": "-I. -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
     "filesystem": {
       "files": [
         {
@@ -410,10 +359,7 @@
   },
   {
     "name": "First test from 'tests/main.c' (32-bit ARM little-endian)",
-    "compilation_cmd": "-I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
-    "compilation_database": [
-      "compile_commands.json"
-    ],
+    "compilation_cmd": "-I. -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
     "filesystem": {
       "files": [
         {
