Removed both -D from tis.config

--- a/tis.config
+++ b/tis.config
@@ -1,7 +1,7 @@
 [
   {
     "name": "Example from README.md (GCC-like x86-64)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -15,7 +15,7 @@
   },
   {
     "name": "Example from README.md (32-bit ARM little-endian)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -29,7 +29,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data1 (GCC-like x86-64)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -54,7 +54,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data1 (32-bit ARM little-endian)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -79,7 +79,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data2 (GCC-like x86-64)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -104,7 +104,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data2 (32-bit ARM little-endian)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -129,7 +129,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data3 (GCC-like x86-64)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -154,7 +154,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data3 (32-bit ARM little-endian)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -179,7 +179,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data4 (GCC-like x86-64)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -204,7 +204,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data4 (32-bit ARM little-endian)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -229,7 +229,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data5 (GCC-like x86-64)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -254,7 +254,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data5 (32-bit ARM little-endian)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -279,7 +279,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data6 (GCC-like x86-64)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -304,7 +304,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data6 (32-bit ARM little-endian)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -329,7 +329,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data7 (GCC-like x86-64)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -354,7 +354,7 @@
   },
   {
     "name": "Testing 'tests/tis-fuzz-header.c' on afl-generated data7 (32-bit ARM little-endian)",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I . -I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -379,7 +379,7 @@
   },
   {
     "name": "First test from 'tests/main.c' (GCC-like x86-64)",
-    "compilation_cmd": "-I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I src",
     "compilation_database": [
       "compile_commands.json"
     ],
@@ -410,7 +410,7 @@
   },
   {
     "name": "First test from 'tests/main.c' (32-bit ARM little-endian)",
-    "compilation_cmd": "-I src -D_POSIX_SOURCE",
+    "compilation_cmd": "-I src",
     "compilation_database": [
       "compile_commands.json"
     ],
