--- a/tis.config
+++ b/tis.config
@@ -1,7 +1,7 @@
 [
   {
     "name": "Example from README.md",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
+    "compilation_cmd": "-I . -I src",
     "files": [
       "tests/readme_example.c",
       "tis/stub.c",
@@ -12,7 +12,7 @@
   },
   {
     "name": "First test from 'tests/main.c'",
-    "compilation_cmd": "-I . -I src -D_POSIX_SOURCE -D_XOPEN_SOURCE=600",
+    "compilation_cmd": "-I . -I src",
     "filesystem": {
       "files": [
         {
